--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  position: fixed;
   width: 100vw;
 }
 
